removed from index.css an overflow:hidden and added it to Hand.module.css to fix the issue of not being able to scroll the page while keeping the cards in the hand having the ability to 'stack' when their combined width exceeds the table width.

--- a/src/Game/Components/Hand.module.css
+++ b/src/Game/Components/Hand.module.css
@@ -1,4 +1,5 @@
 .Hand {
+
 	.cards {
 		display: flex;
 		justify-content: center;
@@ -6,6 +7,7 @@
 
 		li {
 			list-style: none;
+			overflow: hidden;
 		}
 	}
 }
