--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,6 @@
 	box-sizing: border-box;
 }
 
-* {
-	overflow: hidden;
-}
-
 a {
 	font-weight: 500;
 	color: #646cff;
